Analysis code now compiles. Next step is to port over SBND Decoder code.

--- a/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
@@ -1,13 +1,13 @@
-find_ups_product( lardataobj v1_17_00 )
+# find_ups_product( lardataobj v1_17_00 )
 
 # filter modules for running online monitoring
 add_subdirectory(OnlineFilters)
 # subdirectory for SBND decoder
-add_subdirectory(SBND_Decode)
+# add_subdirectory(SBND_Decode)
 # install fcl
 add_subdirectory(fcl)
 
-link_directories($ENV{FFTW_LIBRARY})
+# link_directories($ENV{FFTW_LIBRARY})
 
 art_dictionary(DICTIONARY_LIBRARIES tpcAnalysis_SBN)
 
@@ -22,23 +22,22 @@ cet_make_library( LIBRARY_NAME tpcAnalysis_SBN
 		Noise.cc
 		PeakFinder.cc
 		ChannelData.cc
-    Purity.cc
 	LIBRARIES
 		tpcAnalysis_MODE
 		${LARDATAOBJ} 
 		lardataobj_RawData
 		lardata_Utilities
+                        ${ART_FRAMEWORK_PRINCIPAL}
+                        ${ART_FRAMEWORK_SERVICES_REGISTRY}
+                        ${ART_FRAMEWORK_SERVICES_BASIC}
+                        ${ART_FRAMEWORK_SERVICES_OPTIONAL}
+                        ${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
+                        art_Persistency_Common
         	${ART_FRAMEWORK_IO_SOURCES}
-       		${ART_FRAMEWORK_PRINCIPAL}
        		canvas
-	        ${ART_FRAMEWORK_SERVICES_REGISTRY}
-		${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
-		art_Framework_Services_Optional_TFileService_service
 		art_Framework_Services_FileServiceInterfaces
 		${ART_UTILITIES}
 		${FHICLCPP}
-		${ART_FRAMEWORK_CORE}
-		${ART_FRAMEWORK_PRINCIPAL}
 		${ROOT_BASIC_LIB_LIST} 
 		fftw3
                            larcore_Geometry_Geometry_service
@@ -49,8 +48,6 @@ cet_make_library( LIBRARY_NAME tpcAnalysis_SBN
                            lardata_DetectorInfoServices_DetectorClocksServiceStandard_service
                            nutools_RandomUtils_NuRandomService_service
                            ${ART_FRAMEWORK_CORE}
-                           ${ART_FRAMEWORK_PRINCIPAL}
-                           ${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
                            ${ART_FRAMEWORK_SERVICES_OPTIONAL_RANDOMNUMBERGENERATOR_SERVICE}
                            canvas
                            ${MF_MESSAGELOGGER}
@@ -59,7 +56,8 @@ cet_make_library( LIBRARY_NAME tpcAnalysis_SBN
                            cetlib cetlib_except
                            ${CLHEP}
                            ${ROOT_BASIC_LIB_LIST}
-		)
+			${Boost_SYSTEM_LIBRARY}
+)
 
 simple_plugin( OfflineAnalysis module
   tpcAnalysis_SBN
@@ -69,7 +67,13 @@ simple_plugin( OfflineAnalysis module
   ${FHICLCPP}
   ${ART_FRAMEWORK_CORE}
   ${ROOT_BASIC_LIB_LIST}
-  ${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
+                        ${ART_FRAMEWORK_PRINCIPAL}
+                        ${ART_FRAMEWORK_SERVICES_REGISTRY}
+                        ${ART_FRAMEWORK_SERVICES_BASIC}
+                        ${ART_FRAMEWORK_SERVICES_OPTIONAL}
+                        ${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
+                        art_Persistency_Common
+        	${ART_FRAMEWORK_IO_SOURCES}
 )
 
 
