add in additional dependencies needed for sending metrics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,8 @@ find_ups_product( larsoft v1_00_00 )
 find_ups_product( nutools v1_00_00 )
 find_ups_product( art v1_08_00 )
 find_ups_product( cetbuildtools v4_14_01 )
+find_ups_product( sbndaq_artdaq_core v0_01_00 )
+find_ups_product( artdaq_utilities v1_00_00 )
 
 # macros for dictionary and simple_plugin
 include(ArtDictionary)
