first preliminary work on ICARUS decoding

--- a/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(OnlineFilters)
 if( DEFINED ENV{SBNDDAQ_DATATYPES_VERSION} )
 # subdirectory for SBND decoder
   add_subdirectory(SBNDDecode)
+  add_subdirectory(ICARUSDecode)
 endif()
 
 # install fcl
