Update MetricManagerShim to not need unit field since we don't use it. Update all analysis to new MetricManagerShim interface and update example code to reference MetricConfig interface/

--- a/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
@@ -8,8 +8,8 @@ add_subdirectory(OnlineFilters)
 if( DEFINED ENV{SBNDDAQ_DATATYPES_VERSION} )
 # subdirectory for SBND decoder
   add_subdirectory(SBNDDecode)
-  add_subdirectory(ICARUSDecode)
 endif()
+#add_subdirectory(ICARUSDecode)
 
 # install fcl
 add_subdirectory(fcl)
