--- a/sbndqm/dqmAnalysis/example/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/example/CMakeLists.txt
@@ -3,5 +3,6 @@ simple_plugin( ExampleTimeStream "module"
   art_Framework_Services_Optional
   ${ROOT_BASIC_LIB_LIST}
   artdaq-utilities_Plugins
+  sbndqm_redis_config
 )
 
