Update metric interface to be behind namespace. Port analysis code to namespace and port TPC online code to use config interface.

--- a/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
@@ -97,6 +97,7 @@ simple_plugin( OnlineAnalysis module
                         art_Persistency_Common
         	${ART_FRAMEWORK_IO_SOURCES}
   artdaq-utilities_Plugins
+  sbndqm_redis_config
 )
 
 install_headers()
