Copy in a franken-TransferInput_source from artdaq. I really hope this will be temporary.

--- a/sbndqm/CMakeLists.txt
+++ b/sbndqm/CMakeLists.txt
@@ -4,6 +4,7 @@ find_ups_product(icarus_artdaq_base)
 add_subdirectory(dqmAnalysis)
 add_subdirectory(MetricManagerShim)
 add_subdirectory(MetricConfig)
+add_subdirectory(TransferInput)
 
 install_headers()
 install_source()
