add in the xmlrpc_commander

--- a/sbndqm/TransferInput/CMakeLists.txt
+++ b/sbndqm/TransferInput/CMakeLists.txt
@@ -119,3 +119,39 @@ simple_plugin(Shmem "transfer"
   artdaq-core_Core
 )
 
+find_library( XMLRPC_SERVER_ABYSSPP NAMES xmlrpc_server_abyss++ PATHS $ENV{XMLRPC_C_LIBRARY} NO_DEFAULT_PATH )
+find_library( XMLRPC_SERVER_ABYSS NAMES xmlrpc_server_abyss PATHS $ENV{XMLRPC_C_LIBRARY} NO_DEFAULT_PATH )
+find_library( XMLRPC_SERVERPP NAMES xmlrpc_server++ PATHS $ENV{XMLRPC_C_LIBRARY} NO_DEFAULT_PATH )
+find_library( XMLRPC_SERVER NAMES xmlrpc_server PATHS $ENV{XMLRPC_C_LIBRARY} NO_DEFAULT_PATH )
+find_library( XMLRPC_ABYSS NAMES xmlrpc_abyss PATHS $ENV{XMLRPC_C_LIBRARY} NO_DEFAULT_PATH )
+find_library( XMLRPC_CLIENTPP NAMES xmlrpc_client++ PATHS $ENV{XMLRPC_C_LIBRARY} NO_DEFAULT_PATH )
+find_library( XMLRPCPP NAMES xmlrpc++ PATHS $ENV{XMLRPC_C_LIBRARY} NO_DEFAULT_PATH )
+find_library( XMLRPC NAMES xmlrpc PATHS $ENV{XMLRPC_C_LIBRARY} NO_DEFAULT_PATH )
+find_library( XMLRPC_UTIL NAMES xmlrpc_util PATHS $ENV{XMLRPC_C_LIBRARY} NO_DEFAULT_PATH )
+find_library( XMLRPC_UTILPP NAMES xmlrpc_util++ PATHS $ENV{XMLRPC_C_LIBRARY} NO_DEFAULT_PATH )
+# XMLRPC_UTILPP is new to v1_39_07:
+if(NOT XMLRPC_UTILPP)
+        set(XMLRPC_UTILPP "")
+endif()
+find_library( XMLRPC_XMLPARSE NAMES xmlrpc_xmlparse PATHS $ENV{XMLRPC_C_LIBRARY} NO_DEFAULT_PATH )
+find_library( XMLRPC_XMLTOK NAMES xmlrpc_xmltok PATHS $ENV{XMLRPC_C_LIBRARY} NO_DEFAULT_PATH )
+
+simple_plugin(xmlrpc "commander"
+  # artdaq_ExternalComms
+  sbndqm_ExternalComms
+  ${FHICLCPP}
+  ${XMLRPC_SERVER_ABYSSPP}
+  ${XMLRPC_SERVER_ABYSS}
+  ${XMLRPC_SERVERPP}
+  ${XMLRPC_CLIENT}
+  ${XMLRPC_CLIENTPP}
+  ${XMLRPC_SERVER}
+  ${XMLRPC_ABYSS}
+  ${XMLRPCPP}
+  ${XMLRPC}
+  ${XMLRPC_UTIL}
+  ${XMLRPC_UTILPP}
+  ${XMLRPC_XMLPARSE}
+  ${XMLRPC_XMLTOK}
+)
+
