--- a/sbndqm/dqmAnalysis/PMT/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/PMT/CMakeLists.txt
@@ -1,6 +1,6 @@
 simple_plugin( CAENV1730Stream "module"
   art_Framework_Services_Registry
-  art_Framework_Services_Optional
+#  art_root_io_TFileService_service
   ${ROOT_BASIC_LIB_LIST}
   sbndaq-artdaq-core_Overlays_Common 
   tpcAnalysis_MODE
