--- a/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
@@ -42,9 +42,10 @@ cet_make_library( LIBRARY_NAME tpcAnalysis_SBN
                         ${ART_FRAMEWORK_PRINCIPAL}
                         ${ART_FRAMEWORK_SERVICES_REGISTRY}
                         ${ART_FRAMEWORK_SERVICES_BASIC}
-                        ${ART_FRAMEWORK_SERVICES_OPTIONAL}
-                        ${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
+			art_root_io_tfile_support
+			art_root_io_TFileService_service
                         art_Persistency_Common
+			art_Persistency_Provenance
         	${ART_FRAMEWORK_IO_SOURCES}
        		canvas
 		art_Framework_Services_FileServiceInterfaces
@@ -79,11 +80,12 @@ simple_plugin( OfflineAnalysis module
   ${FHICLCPP}
   ${ART_FRAMEWORK_CORE}
   ${ROOT_BASIC_LIB_LIST}
+                        ${ART_FRAMEWORK_CORE}
                         ${ART_FRAMEWORK_PRINCIPAL}
                         ${ART_FRAMEWORK_SERVICES_REGISTRY}
                         ${ART_FRAMEWORK_SERVICES_BASIC}
-                        ${ART_FRAMEWORK_SERVICES_OPTIONAL}
-                        ${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
+			art_root_io_tfile_support
+			art_root_io_TFileService_service
                         art_Persistency_Common
         	${ART_FRAMEWORK_IO_SOURCES}
 )
@@ -96,11 +98,12 @@ simple_plugin( OnlineAnalysis module
   ${FHICLCPP}
   ${ART_FRAMEWORK_CORE}
   ${ROOT_BASIC_LIB_LIST}
+                        ${ART_FRAMEWORK_CORE}
                         ${ART_FRAMEWORK_PRINCIPAL}
                         ${ART_FRAMEWORK_SERVICES_REGISTRY}
                         ${ART_FRAMEWORK_SERVICES_BASIC}
-                        ${ART_FRAMEWORK_SERVICES_OPTIONAL}
-                        ${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
+			art_root_io_tfile_support
+			art_root_io_TFileService_service
                         art_Persistency_Common
         	${ART_FRAMEWORK_IO_SOURCES}
   artdaq-utilities_Plugins
