--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,8 +34,8 @@ cet_cmake_env()
 cet_set_compiler_flags(DIAGS CAUTIOUS
   WERROR
   NO_UNDEFINED
-  EXTRA_FLAGS -pedantic
-  EXTRA_CXX_FLAGS -std=c++14 )
+#  EXTRA_FLAGS -pedantic
+  EXTRA_CXX_FLAGS -std=c++17 )
 
 cet_report_compiler_flags()
 
@@ -43,6 +43,7 @@ cet_report_compiler_flags()
 find_ups_product( larsoft v1_00_00 )
 find_ups_product( nutools v1_00_00 )
 find_ups_product( art v1_08_00 )
+find_ups_product( art_root_io v1_00_00 )
 find_ups_product( cetbuildtools v4_14_01 )
 find_ups_product( sbndaq_artdaq_core v0_01_00 )
 find_ups_product( artdaq_utilities v1_00_00 )
