--- a/sbndqm/dqmAnalysis/example/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/example/CMakeLists.txt
@@ -1,6 +1,6 @@
 simple_plugin( ExampleTimeStream "module"
   art_Framework_Services_Registry
-  art_Framework_Services_Optional
+#  art_Framework_Services_Optional
   ${ROOT_BASIC_LIB_LIST}
   artdaq-utilities_Plugins
   sbndqm_redis_config
