Add in facility for saving ROOT histograms and PNGs in redis. Add database tool to access PNGs and example code which uses it.

--- a/sbndqm/dqmAnalysis/example/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/example/CMakeLists.txt
@@ -6,3 +6,11 @@ simple_plugin( ExampleTimeStream "module"
   sbndqm_redis_config
 )
 
+simple_plugin( ExampleDatabaseStorage "module"
+  art_Framework_Services_Registry
+#  art_Framework_Services_Optional
+  ${ROOT_BASIC_LIB_LIST}
+  sbndqm_redis_config
+  sbndqm_datbase_storage
+)
+
