Stray bits missing from last commit.

--- a/sbndqm/dqmAnalysis/PMT/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/PMT/CMakeLists.txt
@@ -3,8 +3,8 @@ simple_plugin( CAENV1730Stream "module"
 #  art_root_io_TFileService_service
   ${ROOT_BASIC_LIB_LIST}
   sbndaq-artdaq-core_Overlays_Common 
-  tpcAnalysis_MODE
 	artdaq-core_Utilities
+  sbndaqMode
   artdaq-utilities_Plugins
   sbndaq-redis-plugin_redis_metric
 )
