--- a/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
@@ -94,7 +94,7 @@ simple_plugin( TPCWaveformCreator module
 )
 
 simple_plugin( OnlineAnalysis module
-  sbndqm_datbase_storage
+  sbndaq_online_storage
   tpcAnalysis_SBN
   ${LARDATAOBJ}
   lardataobj_RawData
