--- a/sbndqm/dqmAnalysis/example/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/example/CMakeLists.txt
@@ -8,8 +8,10 @@ simple_plugin( ExampleTimeStream "module"
 
 simple_plugin( ExampleDatabaseStorage "module"
   art_Framework_Services_Registry
-#  art_Framework_Services_Optional
+	#  art_Framework_Services_Optional
   ${ROOT_BASIC_LIB_LIST}
   sbndaq_online_storage
+  sbndaq_online_hiredis	
+  sbndaq_online_redis_connection
 )
 
