--- a/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/TPC/CMakeLists.txt
@@ -148,28 +148,7 @@ simple_plugin( ICARUSPurityDQM module
   artdaq-utilities_Plugins
   sbndqm_redis_config
 )
-
-simple_plugin( TPCWaveformAndRedis module
-  tpcAnalysis_SBN
-  ${LARDATAOBJ}
-  lardataobj_RawData
-  ${ART_UTILITIES}
-  ${FHICLCPP}
-  ${ART_FRAMEWORK_CORE}
-  ${ROOT_BASIC_LIB_LIST}
-                        ${ART_FRAMEWORK_CORE}
-                        ${ART_FRAMEWORK_PRINCIPAL}
-                        ${ART_FRAMEWORK_SERVICES_REGISTRY}
-                        ${ART_FRAMEWORK_SERVICES_BASIC}
-                        art_root_io_tfile_support
-                        art_root_io_TFileService_service
-                        art_Persistency_Common
-                ${ART_FRAMEWORK_IO_SOURCES}
-  artdaq-utilities_Plugins
-  sbndqm_redis_config
-)
-
-simple_plugin( Connection module
+simple_plugin( TPCWaveformAndFftRedis module
   tpcAnalysis_SBN
   ${LARDATAOBJ}
   lardataobj_RawData
