migrate to arrtdaq v3_06_02; bump version to v0_03_00

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,17 +42,17 @@ cet_report_compiler_flags()
 # these are minimum required versions, not the actual product versions
 find_ups_product( larsoft v1_00_00 )
 find_ups_product( nutools v1_00_00 )
-find_ups_product( art v1_08_00 )
-find_ups_product( art_root_io v1_00_00 )
-find_ups_product( cetbuildtools v4_14_01 )
-find_ups_product( sbndaq_artdaq_core v0_01_00 )
-find_ups_product( artdaq_utilities v1_00_00 )
+find_ups_product( art v3_02_05 )
+find_ups_product( art_root_io v1_00_05 )
+find_ups_product( cetbuildtools v7_13_02 )
+find_ups_product( sbndaq_artdaq_core v0_03_00 )
+find_ups_product( artdaq_utilities v1_05_02 )
 find_ups_product( jsoncpp v1_00_00 )
-find_ups_product(artdaq_core v3_00_00)
-find_ups_product(fftw)
-find_ups_product(xmlrpc_c)
-find_ups_product(sbndaq_decode)
-find_ups_product( sbndaq_online v0_02_00 )
+find_ups_product( artdaq_core v3_05_07 )
+find_ups_product( fftw )
+find_ups_product( xmlrpc_c )
+find_ups_product( sbndaq_decode v0_03_00 )
+find_ups_product( sbndaq_online v0_03_00 )
 # include_directories($ENV{JSONCPP_LIB})
 
 # macros for dictionary and simple_plugin
