--- a/sbndqm/CMakeLists.txt
+++ b/sbndqm/CMakeLists.txt
@@ -1,7 +1,7 @@
 # basic source code CMakeLists.txt
 
 add_subdirectory(dqmAnalysis)
-add_subdirectory(TransferInput)
+#add_subdirectory(TransferInput)
 
 install_headers()
 install_source()
