--- a/sbndqm/dqmAnalysis/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/CMakeLists.txt
@@ -4,5 +4,5 @@ cet_find_library( BOOST_DATE_TIME     NAMES boost_date_time     PATHS ENV BOOST_
 
 add_subdirectory(PMT)
 add_subdirectory(TPC)
-add_subdirectory(CRT)
+#add_subdirectory(CRT)
 add_subdirectory(example)
