Depoly AliveMonitor and DAQConsumer to flavorqual_dir/tools/

--- a/sbndqm/CMakeLists.txt
+++ b/sbndqm/CMakeLists.txt
@@ -3,6 +3,9 @@
 add_subdirectory(dqmAnalysis)
 #add_subdirectory(TransferInput)
 
+install (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/AliveMonitor DESTINATION ${flavorqual_dir}/tools/)
+install (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/DAQConsumer  DESTINATION ${flavorqual_dir}/tools/)
+
 install_headers()
 install_source()
 install_fhicl()
