Build the example alarm module.

--- a/sbndqm/dqmAnalysis/example/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/example/CMakeLists.txt
@@ -15,3 +15,13 @@ simple_plugin( ExampleDatabaseStorage "module"
   sbndaq_online_redis_connection
 )
 
+simple_plugin( ExampleAlarm "module"
+  art_Framework_Services_Registry
+	#  art_Framework_Services_Optional
+  ${ROOT_BASIC_LIB_LIST}
+  sbndaq_online_storage
+  sbndaq_online_hiredis	
+  sbndaq_online_redis_connection
+)
+
+
