--- a/sbndqm/dqmAnalysis/CRT/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/CRT/CMakeLists.txt
@@ -1,4 +1,4 @@
-simple_plugin( BernCRTAna module
+simple_plugin( BernCRTdqm module
   art_Framework_Services_Registry
   ${ROOT_BASIC_LIB_LIST}
   sbndaq-artdaq-core_Overlays_Common 
