Changes needed for BernCRT module to read fragment containers

--- a/sbndqm/dqmAnalysis/CRT/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/CRT/CMakeLists.txt
@@ -1,7 +1,8 @@
 simple_plugin( BernCRTdqm module
   art_Framework_Services_Registry
   ${ROOT_BASIC_LIB_LIST}
-  sbndaq-artdaq-core_Overlays_Common 
+  sbndaq-artdaq-core_Overlays_Common
+  artdaq-core_Data
   artdaq-utilities_Plugins
   sbndaq_online_storage
   sbndaq_online_hiredis
