move Decode things here and remove sbndaq_decode dependency. add sbncode dependency

--- a/sbndqm/dqmAnalysis/CRT/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/CRT/CMakeLists.txt
@@ -6,6 +6,6 @@ simple_plugin( BernCRTdqm module
   artdaq-utilities_Plugins
   sbndaq_online_storage
   sbndaq_online_hiredis
-  sbndaqMode
+  sbndqm_Decode_Mode
 )
 
