--- a/sbndqm/dqmAnalysis/PMT/DaqDecodePMT/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/PMT/DaqDecodePMT/CMakeLists.txt
@@ -1,6 +1,8 @@
 find_ups_product(artdaq_core)
 find_ups_product(sbndaq_artdaq_core)
+
 simple_plugin( DaqDecoderIcarusPMT module
+  
   sbndaq-artdaq-core_Overlays_ICARUS 
   
   artdaq-core_Utilities  
@@ -12,7 +14,11 @@ simple_plugin( DaqDecoderIcarusPMT module
   ${MF_UTILITIES}
   ${ART_FRAMEWORK_CORE}
   ${ROOT_BASIC_LIB_LIST}
+
+  pmtAnalysis_SBN
+
 )
+
 install_headers()
 install_fhicl()
 install_source()
