New main skeleton for the Online monitor decoder

--- a/sbndqm/dqmAnalysis/PMT/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/PMT/CMakeLists.txt
@@ -1,31 +1,3 @@
-add_subdirectory(DaqDecodePMT)
-
-art_dictionary(DICTIONARY_LIBRARIES pmtAnalysis_SBN)
-
-cet_make_library( 
-
-  LIBRARY_NAME pmtAnalysis_SBN
-  
-  SOURCE  
-    PMTWaveform.cc
-    PMTDigitizerInfo.cc
-  
-  LIBRARIES
-    lardataobj_RawData
-    ${ART_UTILITIES}
-    ${ART_FRAMEWORK_PRINCIPAL}
-    ${ART_FRAMEWORK_SERVICES_REGISTRY}
-    ${ART_FRAMEWORK_SERVICES_BASIC}
-    ${ART_FRAMEWORK_CORE}
-    canvas
-    ${MF_MESSAGELOGGER}
-    ${MF_UTILITIES}
-    ${FHICLCPP}
-    cetlib cetlib_except
-    ${CLHEP}
-    ${ROOT_BASIC_LIB_LIST}
-)
-
 simple_plugin( CAENV1730Stream "module"
   art_Framework_Services_Registry
   ${ROOT_BASIC_LIB_LIST}
@@ -36,6 +8,7 @@ simple_plugin( CAENV1730Stream "module"
   sbndaq_online_storage
   sbndaq_online_redis_connection
   sbndaq_online_hiredis
+  pmtAnalysis_SBN
 )
 
 simple_plugin( CAENV1730WaveformAnalysis "module"
@@ -49,4 +22,5 @@ simple_plugin( CAENV1730WaveformAnalysis "module"
   sbndaq_online_storage
   sbndaq_online_redis_connection
   sbndaq_online_hiredis
+  pmtAnalysis_SBN
 )
