Minimal Working example of PMT online monitor reproducing the current features

--- a/sbndqm/dqmAnalysis/PMT/CMakeLists.txt
+++ b/sbndqm/dqmAnalysis/PMT/CMakeLists.txt
@@ -1,26 +1,33 @@
-simple_plugin( CAENV1730Stream "module"
-  art_Framework_Services_Registry
-  ${ROOT_BASIC_LIB_LIST}
-  sbndaq-artdaq-core_Overlays_Common 
-	artdaq-core_Utilities
-  artdaq-utilities_Plugins
-  sbndqm_Decode_Mode
-  sbndaq_online_storage
-  sbndaq_online_redis_connection
-  sbndaq_online_hiredis
-  pmtAnalysis_SBN
-)
-
 simple_plugin( CAENV1730WaveformAnalysis "module"
+
+  art_Utilities
+  canvas
+
+
   art_Framework_Services_Registry
+
+  ${LARDATAOBJ}
+  lardataobj_RawData
+  ${ART_UTILITIES}
+  ${FHICLCPP}
+  ${MF_MESSAGELOGGER}
+  ${MF_UTILITIES}
+  ${ART_FRAMEWORK_CORE}
+
   ${ROOT_BASIC_LIB_LIST}
+
   art_root_io_tfile_support
   art_root_io_TFileService_service
+
   sbndaq-artdaq-core_Overlays_Common 
+
   artdaq-core_Utilities
   artdaq-utilities_Plugins
+
   sbndaq_online_storage
   sbndaq_online_redis_connection
   sbndaq_online_hiredis
+
   pmtAnalysis_SBN
+
 )
